[Studio] Modified screen "Login"

--- a/client/src/pages/Login/PhonePortrait/Login.html
+++ b/client/src/pages/Login/PhonePortrait/Login.html
@@ -1,10 +1,9 @@
 <ion-content class="content-primary" data-comp-id="content.1" style="">
     <div class="container-primary" data-comp-id="div.1" style="padding: 20% 15%;"
         text-center="">
-        <ion-icon class="ion-md-time" color="secondary" data-comp-id="icon.1"
-            style="font-size: 64px;"></ion-icon>
         <div class="login-form" data-comp-id="div.2"
             style="margin: 75px 0px 0px 0px; border-bottom: 0px none rgb(255, 255, 255);">
+            <img data-comp-id="img.1" src="assets/images/flexlogo.png">
             <form (ngSubmit)="authaction('submit')" data-comp-id="form.1">
                 <ion-row data-comp-id="row.1">
                     <ion-col data-comp-id="column.1" style="padding: 10px;">
