--- a/client/src/pages/Login/PhonePortrait/Login.html
+++ b/client/src/pages/Login/PhonePortrait/Login.html
@@ -7,7 +7,7 @@
             <form (ngSubmit)="authaction('submit')" data-comp-id="form.1">
                 <ion-row data-comp-id="row.1">
                     <ion-col data-comp-id="column.1" style="padding: 10px;">
-                        <ion-icon class="ion-ios-person" data-comp-id="icon.2" style="font-size: 22px;"></ion-icon>
+                        <ion-icon class="ion-ios-person" data-comp-id="icon.1" style="font-size: 22px;"></ion-icon>
                     </ion-col>
                     <ion-col data-comp-id="column.2" text-center="">
                         <ion-item data-comp-id="input.1">
@@ -18,7 +18,7 @@
                 </ion-row>
                 <ion-row data-comp-id="row.2">
                     <ion-col data-comp-id="column.3" style="padding: 10px;">
-                        <ion-icon class="fa fa-lock" data-comp-id="icon.3" style="font-size: 22px;"></ion-icon>
+                        <ion-icon class="fa fa-lock" data-comp-id="icon.2" style="font-size: 22px;"></ion-icon>
                     </ion-col>
                     <ion-col data-comp-id="column.4" text-center="">
                         <ion-item data-comp-id="input.2">
@@ -30,8 +30,8 @@
                 <ion-row data-comp-id="row.3">
                     <ion-col class="button-col" data-comp-id="column.5" style="max-width: 100%;"
                         text-center="">
-                        <button block="" color="secondary" data-comp-id="button.1" ion-button=""
-                            style="margin: 10px 0px;">Login</button>
+                        <button (click)="go('categorylistview')" block="" color="secondary"
+                            data-comp-id="button.1" ion-button="" style="margin: 10px 0px;">Login</button>
                     </ion-col>
                 </ion-row>
             </form>
@@ -40,7 +40,7 @@
                 <div color="secondary" data-comp-id="text.1" ion-text="">
                     Login with Touch ID
                 </div>
-                <ion-icon color="secondary" data-comp-id="icon.4" name="finger-print"></ion-icon>
+                <ion-icon color="secondary" data-comp-id="icon.3" name="finger-print"></ion-icon>
             </touchid-login>
         </div>
     </div>
