--- a/client/src/pages/Login/PhonePortrait/Login.html
+++ b/client/src/pages/Login/PhonePortrait/Login.html
@@ -30,7 +30,7 @@
                 <ion-row data-comp-id="row.3">
                     <ion-col class="button-col" data-comp-id="column.5" style="max-width: 100%;"
                         text-center="">
-                        <button (click)="action('submit')" block="" color="secondary"
+                        <button (click)="authaction('submit')" block="" color="secondary"
                             data-comp-id="button.1" ion-button="" style="margin: 10px 0px;">Login</button>
                     </ion-col>
                 </ion-row>
